RESOLVED FIXED73516
[EFL] Fix broken UTF-8 characters issue on editor command.
https://bugs.webkit.org/show_bug.cgi?id=73516
Summary [EFL] Fix broken UTF-8 characters issue on editor command.
Kangil Han
Reported 2011-11-30 20:59:05 PST
The issue has been described that Korean character is broken on pasting copied text. In my analysis, this is from lack of format change between C style UTF-8 character pointer and C++ style String reference. Therefore, this patch will convert types to resolve the problem.
Attachments
patch file for this bug (1.65 KB, patch)
2011-11-30 21:02 PST, Kangil Han
no flags
Kangil Han
Comment 1 2011-11-30 21:02:53 PST
Created attachment 117323 [details] patch file for this bug
Gyuyoung Kim
Comment 2 2011-11-30 21:37:01 PST
Comment on attachment 117323 [details] patch file for this bug LGTM.
Raphael Kubo da Costa (:rakuco)
Comment 3 2011-12-01 05:10:20 PST
The patch looks OK. Do you have any test case, or does it break any of the current layout tests?
Kangil Han
Comment 4 2011-12-02 03:32:12 PST
I've heard that someone is working for api test case framework so this time I would like to land source patch only. (In reply to comment #3) > The patch looks OK. Do you have any test case, or does it break any of the current layout tests?
Eric Seidel (no email)
Comment 5 2011-12-03 14:17:44 PST
Comment on attachment 117323 [details] patch file for this bug How do you test this?
WebKit Review Bot
Comment 6 2011-12-04 03:32:42 PST
Comment on attachment 117323 [details] patch file for this bug Clearing flags on attachment: 117323 Committed r101952: <http://trac.webkit.org/changeset/101952>
WebKit Review Bot
Comment 7 2011-12-04 03:32:46 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.