[EFL] Fix broken UTF-8 characters issue on editor command. https://bugs.webkit.org/show_bug.cgi?id=73516

Patch by Kangil Han <kangil.han@samsung.com> on 2011-12-04
Reviewed by Ryosuke Niwa.

The issue has been described that Korean character is broken on pasting copied text.
In my analysis, this is from lack of format change between C style UTF-8 character pointer and C++ style String reference.
Therefore, this patch will convert types to resolve the problem.

* ewk/ewk_view.cpp:
(_ewk_view_editor_command):

Canonical link: https://commits.webkit.org/90415@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101952 268f45cc-cd09-0410-ab3c-d52691b4dbfc